datasets/corley/zookeeper/queries/long/2934.txt
I see errors like: 


/var/zookeeper/src/recipes/queue/src/c/../../../../../src/c/include/zookeeper_log.h:39:74: error: expected expression before ')' token
     log_message(_cb, ZOO_LOG_LEVEL_DEBUG, __LINE__, __func__, __VA_ARGS__)
                                                                          ^

